[gd_scene format=3 uid="uid://7hurigpj5hko"]

[ext_resource type="Script" uid="uid://pwy1aqut74v2" path="res://src/core/ui/ui_manager.gd" id="1_lrlm8"]
[ext_resource type="Texture2D" uid="uid://oqicky1cb57i" path="res://assets/images/ui/bag.png" id="2_p6vyg"]
[ext_resource type="Texture2D" uid="uid://pslae28tjawb" path="res://assets/images/ui/equipment.png" id="3_6cqix"]
[ext_resource type="Texture2D" uid="uid://be1nfsqepy5tp" path="res://assets/images/ui/party.png" id="4_l63rf"]
[ext_resource type="Texture2D" uid="uid://s80b7l6ju8fi" path="res://assets/images/ui/quest.png" id="5_1ktdf"]
[ext_resource type="Texture2D" uid="uid://da0cbth0y2rk4" path="res://assets/images/ui/skill.png" id="6_xrjqp"]
[ext_resource type="Texture2D" uid="uid://bijkvo4w0fmyk" path="res://assets/images/ui/system.png" id="7_nrhvx"]
[ext_resource type="Texture2D" uid="uid://bdr3ox7rmncoa" path="res://assets/images/ui/menu.png" id="8_e18ks"]
[ext_resource type="Script" uid="uid://cr02rasvp0u3l" path="res://src/core/inventory/inventory.gd" id="8_p6vyg"]
[ext_resource type="PackedScene" uid="uid://b746n7pwnhv71" path="res://src/core/inventory/item_slot.tscn" id="9_6cqix"]
[ext_resource type="Texture2D" uid="uid://dosh6pucdfgan" path="res://assets/images/ui/menu_cross.png" id="9_6mshi"]
[ext_resource type="Texture2D" uid="uid://c8p84dn2nhf2l" path="res://assets/images/objects/potion_red_l.png" id="10_l63rf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgm53"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.50500894, 0.9165033, 0.41913044, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_mgm53"]

[sub_resource type="LabelSettings" id="LabelSettings_lrlm8"]
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_uewes"]
font_size = 14
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="UIManager" type="CanvasLayer" unique_id=31682752]
script = ExtResource("1_lrlm8")

[node name="SystemMenu" type="Panel" parent="." unique_id=402998163]
offset_left = 147.0
offset_top = 68.0
offset_right = 1147.0
offset_bottom = 668.0

[node name="HBoxContainer" type="HBoxContainer" parent="SystemMenu" unique_id=849693258]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="SideBar" type="VBoxContainer" parent="SystemMenu/HBoxContainer" unique_id=2002261838]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="InventoryButton" type="Button" parent="SystemMenu/HBoxContainer/SideBar" unique_id=1272888619]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/pressed = SubResource("StyleBoxFlat_mgm53")
toggle_mode = true
button_group = SubResource("ButtonGroup_mgm53")

[node name="HBoxContainer" type="HBoxContainer" parent="SystemMenu/HBoxContainer/SideBar/InventoryButton" unique_id=712046137]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="SystemMenu/HBoxContainer/SideBar/InventoryButton/HBoxContainer" unique_id=68188541]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_p6vyg")
expand_mode = 1
stretch_mode = 3

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/SideBar/InventoryButton/HBoxContainer" unique_id=312406056]
layout_mode = 2
size_flags_horizontal = 3
text = "背包 (F1)"

[node name="EquipmentButton" type="Button" parent="SystemMenu/HBoxContainer/SideBar" unique_id=186932044]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/pressed = SubResource("StyleBoxFlat_mgm53")
toggle_mode = true
button_group = SubResource("ButtonGroup_mgm53")

[node name="HBoxContainer" type="HBoxContainer" parent="SystemMenu/HBoxContainer/SideBar/EquipmentButton" unique_id=716465021]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="SystemMenu/HBoxContainer/SideBar/EquipmentButton/HBoxContainer" unique_id=1496516606]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_6cqix")
expand_mode = 1
stretch_mode = 3

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/SideBar/EquipmentButton/HBoxContainer" unique_id=410020744]
layout_mode = 2
size_flags_horizontal = 3
text = "裝備 (F2)"

[node name="PartyButton" type="Button" parent="SystemMenu/HBoxContainer/SideBar" unique_id=585552041]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/pressed = SubResource("StyleBoxFlat_mgm53")
toggle_mode = true
button_group = SubResource("ButtonGroup_mgm53")

[node name="HBoxContainer" type="HBoxContainer" parent="SystemMenu/HBoxContainer/SideBar/PartyButton" unique_id=827100160]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="SystemMenu/HBoxContainer/SideBar/PartyButton/HBoxContainer" unique_id=1850718098]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_l63rf")
expand_mode = 1
stretch_mode = 3

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/SideBar/PartyButton/HBoxContainer" unique_id=1007752504]
layout_mode = 2
size_flags_horizontal = 3
text = "隊伍 (F3)"

[node name="QuestButton" type="Button" parent="SystemMenu/HBoxContainer/SideBar" unique_id=559320460]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/pressed = SubResource("StyleBoxFlat_mgm53")
toggle_mode = true
button_group = SubResource("ButtonGroup_mgm53")

[node name="HBoxContainer" type="HBoxContainer" parent="SystemMenu/HBoxContainer/SideBar/QuestButton" unique_id=128321344]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="SystemMenu/HBoxContainer/SideBar/QuestButton/HBoxContainer" unique_id=2031962232]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_1ktdf")
expand_mode = 1
stretch_mode = 3

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/SideBar/QuestButton/HBoxContainer" unique_id=446189405]
layout_mode = 2
size_flags_horizontal = 3
text = "任務 (F4)"

[node name="SkillButton" type="Button" parent="SystemMenu/HBoxContainer/SideBar" unique_id=703191665]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/pressed = SubResource("StyleBoxFlat_mgm53")
toggle_mode = true
button_group = SubResource("ButtonGroup_mgm53")

[node name="HBoxContainer" type="HBoxContainer" parent="SystemMenu/HBoxContainer/SideBar/SkillButton" unique_id=254724127]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="SystemMenu/HBoxContainer/SideBar/SkillButton/HBoxContainer" unique_id=268193284]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_xrjqp")
expand_mode = 1
stretch_mode = 3

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/SideBar/SkillButton/HBoxContainer" unique_id=1775269989]
layout_mode = 2
size_flags_horizontal = 3
text = "技能 (F5)"

[node name="SystemButton" type="Button" parent="SystemMenu/HBoxContainer/SideBar" unique_id=1100150791]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/pressed = SubResource("StyleBoxFlat_mgm53")
toggle_mode = true
button_group = SubResource("ButtonGroup_mgm53")

[node name="HBoxContainer" type="HBoxContainer" parent="SystemMenu/HBoxContainer/SideBar/SystemButton" unique_id=1639595639]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="SystemMenu/HBoxContainer/SideBar/SystemButton/HBoxContainer" unique_id=921529767]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("7_nrhvx")
expand_mode = 1
stretch_mode = 3

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/SideBar/SystemButton/HBoxContainer" unique_id=2025989180]
layout_mode = 2
size_flags_horizontal = 3
text = "系統 (F6)"

[node name="VBoxContainer" type="VBoxContainer" parent="SystemMenu/HBoxContainer" unique_id=592692818]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Title" type="Label" parent="SystemMenu/HBoxContainer/VBoxContainer" unique_id=653989519]
layout_mode = 2
size_flags_vertical = 3
text = "標題"
label_settings = SubResource("LabelSettings_lrlm8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="SystemMenu/HBoxContainer/VBoxContainer" unique_id=78887691]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
current_tab = 0
tabs_visible = false

[node name="Inventory" type="Control" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer" unique_id=2141877612]
layout_mode = 2
script = ExtResource("8_p6vyg")
metadata/_tab_index = 0

[node name="Background" type="ColorRect" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory" unique_id=167181047]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Layout" type="VBoxContainer" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory" unique_id=340137225]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CategoryTabs" type="HBoxContainer" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout" unique_id=1109240741]
layout_mode = 2
size_flags_vertical = 3

[node name="Consumable" type="Button" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/CategoryTabs" unique_id=1010890604]
layout_mode = 2
size_flags_horizontal = 3
text = "消耗品"

[node name="Weapon" type="Button" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/CategoryTabs" unique_id=414736406]
layout_mode = 2
size_flags_horizontal = 3
text = "武器"

[node name="Other" type="Button" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/CategoryTabs" unique_id=969174722]
layout_mode = 2
size_flags_horizontal = 3
text = "其他"

[node name="ContentArea" type="HBoxContainer" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout" unique_id=1704005468]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0

[node name="ItemListScroll" type="ScrollContainer" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea" unique_id=643409878]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
horizontal_scroll_mode = 0

[node name="ItemGrid" type="GridContainer" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll" unique_id=1289703606]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="ItemSlot" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=1585232007 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot2" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=794005334 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot3" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=1587565627 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot4" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=539692403 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot5" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=203761462 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot6" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=2101965915 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot7" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=768858593 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot8" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=2116508114 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot9" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=1776086766 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot10" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=672093469 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot11" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=1846890525 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot12" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=735688084 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot13" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=824680698 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot14" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=809777659 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot15" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=502160912 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot16" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=208557891 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot17" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=810057116 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot18" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=749519546 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot19" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=1391255701 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemSlot20" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemListScroll/ItemGrid" unique_id=1946383111 instance=ExtResource("9_6cqix")]
layout_mode = 2

[node name="ItemDetails" type="VBoxContainer" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea" unique_id=1540039397]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ItemImage" type="TextureRect" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemDetails" unique_id=1369306136]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource("10_l63rf")
stretch_mode = 5

[node name="ItemName" type="Label" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemDetails" unique_id=1552786142]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemDescription" type="RichTextLabel" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Inventory/Layout/ContentArea/ItemDetails" unique_id=637842087]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true

[node name="Control2" type="Control" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer" unique_id=415914897]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Control2" unique_id=1013045436]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Label 2"

[node name="Control3" type="Control" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer" unique_id=832644673]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Control3" unique_id=1115329775]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Label 3"

[node name="Control4" type="Control" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer" unique_id=1206288090]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Control4" unique_id=587470350]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Label 4"

[node name="Control5" type="Control" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer" unique_id=385260858]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Control5" unique_id=1114062311]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Label 5"

[node name="Control6" type="Control" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer" unique_id=811531302]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="Label" type="Label" parent="SystemMenu/HBoxContainer/VBoxContainer/TabContainer/Control6" unique_id=1721450200]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Label 6"

[node name="MenuButton" type="TextureButton" parent="." unique_id=932263008]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 80.0
grow_horizontal = 0
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("8_e18ks")
texture_pressed = ExtResource("9_6mshi")

[node name="Label" type="Label" parent="MenuButton" unique_id=314747874]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = 5.0
offset_right = 2.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 0
text = "選單 (Tab)"
label_settings = SubResource("LabelSettings_uewes")

[connection signal="pressed" from="SystemMenu/HBoxContainer/SideBar/InventoryButton" to="." method="_change_tab" binds= [0]]
[connection signal="pressed" from="SystemMenu/HBoxContainer/SideBar/EquipmentButton" to="." method="_change_tab" binds= [1]]
[connection signal="pressed" from="SystemMenu/HBoxContainer/SideBar/PartyButton" to="." method="_change_tab" binds= [2]]
[connection signal="pressed" from="SystemMenu/HBoxContainer/SideBar/QuestButton" to="." method="_change_tab" binds= [3]]
[connection signal="pressed" from="SystemMenu/HBoxContainer/SideBar/SkillButton" to="." method="_change_tab" binds= [4]]
[connection signal="pressed" from="SystemMenu/HBoxContainer/SideBar/SystemButton" to="." method="_change_tab" binds= [5]]
[connection signal="pressed" from="MenuButton" to="." method="_toggle_system_menu"]
